Fix broken mobile use case caption
- Missing pos: relative on figcaption caused the caption to overlap with the video on small screens

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -286,6 +286,7 @@ figcaption {
 @media (max-width: vars.$screen-lg) {
 	figcaption {
 		// font-size: 0.875rem;
+		position: relative;
 		text-wrap: unset;
 		color: var(--color-text-low-contrast);
 	}
